[gd_scene load_steps=8 format=3 uid="uid://dv2loqyvmd1y8"]

[ext_resource type="Script" path="res://GhostSpell.gd" id="1_cw6md"]
[ext_resource type="Texture2D" uid="uid://corp1e7id3tgr" path="res://assets/sprites/spell1_flying.png" id="2_g7b55"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ygy20"]
radius = 7.99658
height = 17.9923

[sub_resource type="Animation" id="Animation_m1jao"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5v4y0"]
resource_name = "fly"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9, 10]
}

[sub_resource type="Animation" id="Animation_kw42n"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s1gla"]
_data = {
"RESET": SubResource("Animation_m1jao"),
"fly": SubResource("Animation_5v4y0"),
"shoot": SubResource("Animation_kw42n")
}

[node name="GhostSpell" type="Area2D"]
scale = Vector2(1.53694, 1.53694)
collision_layer = 8
collision_mask = 5
script = ExtResource("1_cw6md")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.6875, 1.6875)
texture = ExtResource("2_g7b55")
vframes = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
rotation = -1.54156
shape = SubResource("CapsuleShape2D_ygy20")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s1gla")
}

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
